Closed Bug 905281 Opened 11 years ago Closed 11 years ago

PhoneGap integration: Window.navigator security exception is blocking PhoneGap integration

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
critical

Tracking

(blocking-b2g:leo+, firefox26 unaffected, b2g18 fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 wontfix, b2g-v1.1hd fixed)

RESOLVED FIXED
1.1 QE5
blocking-b2g leo+
Tracking Status
firefox26 --- unaffected
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix
b2g-v1.1hd --- fixed

People

(Reporter: vkrishnamoorthy, Assigned: fabrice)

References

Details

(Whiteboard: QARegressExclude)

Attachments

(1 file)

Opening this bug for preventing the window.navigator object from throwing a security exception on firefox OS 1.1 and simulator.

the issue is fixed in later versions (refer 894335) but not in 1.1

Rationale for requesting this patch in 1.1:
- This bug is blocking the PhoneGap/Cordova integration efforts.
- If we do not have this patch in 1.1 PhoneGap developers cannot target 1.1 for developing apps, which means that, though we have the integration in place, developers will have to wait for 1.2 based devices.
- PhoneGap accounts for ~4% of the apps on iTunes and Google Play and has a significant community of web developers.
- The patch is relatively low risk (returning NULL instead of throwing an exception)

Fred,Piotr, please provide the list of properties throwing an security exception
Fred,Piotr, please provide the list of properties throwing an security exception
Flags: needinfo?(zaloon)
Flags: needinfo?(fwenzel)
blocking-b2g: --- → leo?
I discussed this with Piotr and he iterated over all properties of navigator, the only one throwing an exception is:

mozTime
Flags: needinfo?(zaloon)
Flags: needinfo?(fwenzel)
leo? from email - this blocks partner work. I'll follow up and leo+ if appropriate.
Attached patch patchSplinter Review
Assignee: nobody → fabrice
Attachment #791530 - Flags: review?(jonas)
Comment on attachment 791530 [details] [diff] [review]
patch

Review of attachment 791530 [details] [diff] [review]:
-----------------------------------------------------------------

Super safe patch
Attachment #791530 - Flags: review?(jonas) → review+
blocking-b2g: leo? → leo+
https://hg.mozilla.org/releases/mozilla-b2g18_v1_1_0_hd/rev/285e2afe2a3b

In the future, please resolve v1.1-only bugs when landing on b2g18 to avoid confusion.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → 1.1 QE5
Whiteboard: QARegressExclude
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: