Bug 905281 - PhoneGap integration: Window.navigator security exception is blocking PhoneGap integration r=sicking a=leo+